// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there is a URL 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Result
    fields={
      Object {
        "field": "value",
      }
    }
    onClickLink={[Function]}
    url="http://www.example.com"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="result__header"
        />,
        <div
          className="result__body"
        >
          <ul
            className="result__details"
          >
            <li>
              <span
                className="result__key"
              >
                field
              </span>
               
              <span
                className="result__value"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "value",
                  }
                }
              />
            </li>
          </ul>
        </div>,
      ],
      "className": "result",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
          ],
          "className": "result__header",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ul
            className="result__details"
          >
            <li>
              <span
                className="result__key"
              >
                field
              </span>
               
              <span
                className="result__value"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "value",
                  }
                }
              />
            </li>
          </ul>,
          "className": "result__body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>,
            ],
            "className": "result__details",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "field",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="result__key"
                  >
                    field
                  </span>,
                  " ",
                  <span
                    className="result__value"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "value",
                      }
                    }
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "field",
                    "className": "result__key",
                  },
                  "ref": null,
                  "rendered": "field",
                  "type": "span",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "result__value",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "value",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
        "type": "div",
      },
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="result__header"
          />,
          <div
            className="result__body"
          >
            <ul
              className="result__details"
            >
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>
            </ul>
          </div>,
        ],
        "className": "result",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
            ],
            "className": "result__header",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ul
              className="result__details"
            >
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>
            </ul>,
            "className": "result__body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <span
                    className="result__key"
                  >
                    field
                  </span>
                   
                  <span
                    className="result__value"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "value",
                      }
                    }
                  />
                </li>,
              ],
              "className": "result__details",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "field",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="result__key"
                    >
                      field
                    </span>,
                    " ",
                    <span
                      className="result__value"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "value",
                        }
                      }
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "field",
                      "className": "result__key",
                    },
                    "ref": null,
                    "rendered": "field",
                    "type": "span",
                  },
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "result__value",
                      "dangerouslySetInnerHTML": Object {
                        "__html": "value",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
          "type": "div",
        },
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders correctly when there is a title 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Result
    fields={
      Object {
        "field": "value",
      }
    }
    onClickLink={[Function]}
    title="Title"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="result__header"
        >
          <span
            className="result__title"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Title",
              }
            }
          />
        </div>,
        <div
          className="result__body"
        >
          <ul
            className="result__details"
          >
            <li>
              <span
                className="result__key"
              >
                field
              </span>
               
              <span
                className="result__value"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "value",
                  }
                }
              />
            </li>
          </ul>
        </div>,
      ],
      "className": "result",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <span
              className="result__title"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Title",
                }
              }
            />,
            undefined,
          ],
          "className": "result__header",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "result__title",
              "dangerouslySetInnerHTML": Object {
                "__html": "Title",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "span",
          },
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ul
            className="result__details"
          >
            <li>
              <span
                className="result__key"
              >
                field
              </span>
               
              <span
                className="result__value"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "value",
                  }
                }
              />
            </li>
          </ul>,
          "className": "result__body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>,
            ],
            "className": "result__details",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "field",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="result__key"
                  >
                    field
                  </span>,
                  " ",
                  <span
                    className="result__value"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "value",
                      }
                    }
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "field",
                    "className": "result__key",
                  },
                  "ref": null,
                  "rendered": "field",
                  "type": "span",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "result__value",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "value",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
        "type": "div",
      },
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="result__header"
          >
            <span
              className="result__title"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Title",
                }
              }
            />
          </div>,
          <div
            className="result__body"
          >
            <ul
              className="result__details"
            >
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>
            </ul>
          </div>,
        ],
        "className": "result",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <span
                className="result__title"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Title",
                  }
                }
              />,
              undefined,
            ],
            "className": "result__header",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "result__title",
                "dangerouslySetInnerHTML": Object {
                  "__html": "Title",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "span",
            },
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ul
              className="result__details"
            >
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>
            </ul>,
            "className": "result__body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <span
                    className="result__key"
                  >
                    field
                  </span>
                   
                  <span
                    className="result__value"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "value",
                      }
                    }
                  />
                </li>,
              ],
              "className": "result__details",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "field",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="result__key"
                    >
                      field
                    </span>,
                    " ",
                    <span
                      className="result__value"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "value",
                        }
                      }
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "field",
                      "className": "result__key",
                    },
                    "ref": null,
                    "rendered": "field",
                    "type": "span",
                  },
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "result__value",
                      "dangerouslySetInnerHTML": Object {
                        "__html": "value",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
          "type": "div",
        },
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders correctly when there is a title and url 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Result
    fields={
      Object {
        "field": "value",
      }
    }
    onClickLink={[Function]}
    title="Title"
    url="http://www.example.com"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="result__header"
        >
          <a
            className="result__title"
            dangerouslySetInnerHTML={
              Object {
                "__html": "Title",
              }
            }
            href="http://www.example.com"
            onClick={[Function]}
            target="_blank"
          />
        </div>,
        <div
          className="result__body"
        >
          <ul
            className="result__details"
          >
            <li>
              <span
                className="result__key"
              >
                field
              </span>
               
              <span
                className="result__value"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "value",
                  }
                }
              />
            </li>
          </ul>
        </div>,
      ],
      "className": "result",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            false,
            <a
              className="result__title"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Title",
                }
              }
              href="http://www.example.com"
              onClick={[Function]}
              target="_blank"
            />,
          ],
          "className": "result__header",
        },
        "ref": null,
        "rendered": Array [
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "result__title",
              "dangerouslySetInnerHTML": Object {
                "__html": "Title",
              },
              "href": "http://www.example.com",
              "onClick": [Function],
              "target": "_blank",
            },
            "ref": null,
            "rendered": null,
            "type": "a",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ul
            className="result__details"
          >
            <li>
              <span
                className="result__key"
              >
                field
              </span>
               
              <span
                className="result__value"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "value",
                  }
                }
              />
            </li>
          </ul>,
          "className": "result__body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>,
            ],
            "className": "result__details",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "field",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="result__key"
                  >
                    field
                  </span>,
                  " ",
                  <span
                    className="result__value"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "value",
                      }
                    }
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "field",
                    "className": "result__key",
                  },
                  "ref": null,
                  "rendered": "field",
                  "type": "span",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "result__value",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "value",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
        "type": "div",
      },
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="result__header"
          >
            <a
              className="result__title"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Title",
                }
              }
              href="http://www.example.com"
              onClick={[Function]}
              target="_blank"
            />
          </div>,
          <div
            className="result__body"
          >
            <ul
              className="result__details"
            >
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>
            </ul>
          </div>,
        ],
        "className": "result",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              false,
              <a
                className="result__title"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "Title",
                  }
                }
                href="http://www.example.com"
                onClick={[Function]}
                target="_blank"
              />,
            ],
            "className": "result__header",
          },
          "ref": null,
          "rendered": Array [
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "result__title",
                "dangerouslySetInnerHTML": Object {
                  "__html": "Title",
                },
                "href": "http://www.example.com",
                "onClick": [Function],
                "target": "_blank",
              },
              "ref": null,
              "rendered": null,
              "type": "a",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ul
              className="result__details"
            >
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>
            </ul>,
            "className": "result__body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <span
                    className="result__key"
                  >
                    field
                  </span>
                   
                  <span
                    className="result__value"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "value",
                      }
                    }
                  />
                </li>,
              ],
              "className": "result__details",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "field",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="result__key"
                    >
                      field
                    </span>,
                    " ",
                    <span
                      className="result__value"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "value",
                        }
                      }
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "field",
                      "className": "result__key",
                    },
                    "ref": null,
                    "rendered": "field",
                    "type": "span",
                  },
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "result__value",
                      "dangerouslySetInnerHTML": Object {
                        "__html": "value",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
          "type": "div",
        },
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`renders correctly when there is not a URL or title 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Result
    fields={
      Object {
        "field": "value",
      }
    }
    onClickLink={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="result__header"
        />,
        <div
          className="result__body"
        >
          <ul
            className="result__details"
          >
            <li>
              <span
                className="result__key"
              >
                field
              </span>
               
              <span
                className="result__value"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "value",
                  }
                }
              />
            </li>
          </ul>
        </div>,
      ],
      "className": "result",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
          ],
          "className": "result__header",
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <ul
            className="result__details"
          >
            <li>
              <span
                className="result__key"
              >
                field
              </span>
               
              <span
                className="result__value"
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "value",
                  }
                }
              />
            </li>
          </ul>,
          "className": "result__body",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>,
            ],
            "className": "result__details",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "field",
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="result__key"
                  >
                    field
                  </span>,
                  " ",
                  <span
                    className="result__value"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "value",
                      }
                    }
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "field",
                    "className": "result__key",
                  },
                  "ref": null,
                  "rendered": "field",
                  "type": "span",
                },
                " ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "className": "result__value",
                    "dangerouslySetInnerHTML": Object {
                      "__html": "value",
                    },
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "span",
                },
              ],
              "type": "li",
            },
          ],
          "type": "ul",
        },
        "type": "div",
      },
    ],
    "type": "li",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="result__header"
          />,
          <div
            className="result__body"
          >
            <ul
              className="result__details"
            >
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>
            </ul>
          </div>,
        ],
        "className": "result",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
            ],
            "className": "result__header",
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <ul
              className="result__details"
            >
              <li>
                <span
                  className="result__key"
                >
                  field
                </span>
                 
                <span
                  className="result__value"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "value",
                    }
                  }
                />
              </li>
            </ul>,
            "className": "result__body",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <li>
                  <span
                    className="result__key"
                  >
                    field
                  </span>
                   
                  <span
                    className="result__value"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "value",
                      }
                    }
                  />
                </li>,
              ],
              "className": "result__details",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "field",
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <span
                      className="result__key"
                    >
                      field
                    </span>,
                    " ",
                    <span
                      className="result__value"
                      dangerouslySetInnerHTML={
                        Object {
                          "__html": "value",
                        }
                      }
                    />,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "field",
                      "className": "result__key",
                    },
                    "ref": null,
                    "rendered": "field",
                    "type": "span",
                  },
                  " ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "result__value",
                      "dangerouslySetInnerHTML": Object {
                        "__html": "value",
                      },
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "span",
                  },
                ],
                "type": "li",
              },
            ],
            "type": "ul",
          },
          "type": "div",
        },
      ],
      "type": "li",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
